@@ -16,6 +16,7 @@ Fixes to IPE:
 #822234 by Amitaibu: Missing url() caused IPE to not work on sites not using top level URLs.
 #844062: Turned the normal drag and drop editor into a renderer plugin, made the IPE part of it. Also some fairly serious code reorganization.
 Improve the renderer selection framework. This framework has no UI, but it utilizes exportables and new choices can be hand crafted.
+Improve the IPE to use the proper cache if it is set, and to respect locking.
 
 Panels 6.x-3.5 (2010-May-28)
 ==============
